--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://madmax2612.github.io/superAdmin",
   "name": "otopark",
   "version": "0.1.0",
   "private": true,
@@ -16,18 +15,18 @@
     "material-table": "^1.68.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.2.0",
+    "react-hook-form": "^6.4.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
