--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chartjs-top-round-bar": "^1.0.1",
     "material-table": "^1.68.0",
     "react": "^16.13.1",
+    "axios": "^0.20.0",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
